# proxsuite

./: CMakeLists.txt
include/proxsuite/linalg/veg/internal/: macros.hpp
